WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220745
REGRESSION(
r269865
) Mail's context menu when right clicking on a link does not contain correct entries
https://bugs.webkit.org/show_bug.cgi?id=220745
Summary
REGRESSION(r269865) Mail's context menu when right clicking on a link does no...
Alex Christensen
Reported
2021-01-19 13:13:18 PST
REGRESSION(
r269865
) Mail's context menu when right clicking on a link does not contain correct entries
Attachments
Patch
(12.87 KB, patch)
2021-01-19 13:16 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-01-19 13:16:44 PST
Created
attachment 417902
[details]
Patch
Megan Gardner
Comment 2
2021-01-19 14:08:04 PST
Gross. R+ as well.
EWS
Comment 3
2021-01-19 14:40:25 PST
Committed
r271619
: <
https://trac.webkit.org/changeset/271619
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417902
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-01-19 14:41:13 PST
<
rdar://problem/73373888
>
Alex Christensen
Comment 5
2021-01-19 15:16:16 PST
rdar://problem/72497319
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug